--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 	<div id="Benefits" class="tabcontent">
 	  <h2 style="color:#233600">Benefits</h2>
-	  <p style="color:black">Benefits Text.</p> 
+	  <p style="color:black">Benefits Text. hello</p> 
 	</div>
 
 	<div id="Disadvantages" class="tabcontent">
