--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	}
 
 	.navagation a.active {
-	  border-bottom: 3px solid #233600;
+	  border-bottom: 3px solid white;
 	}
 	
 	<!-- Tabs/Sections-->
@@ -77,7 +77,7 @@
 	  background: #EEEDED;
 	  color: black;
 	  padding: 6px 12px;
-	  border: 3px solid #233600;
+	  border: 3px solid black;
 	}
 	
 </style>
@@ -105,32 +105,32 @@
 	
 	<!--Tab Content-->
 	<div id="Topic" class="tabcontent">
-	  <h2 style="color:#233600">Technology for Seniors</h2>
+	  <h2 style="color:black">Technology for Seniors</h2>
 	  <p style="color:black">Technology for Seniors Text.</p>
 	</div>
 
 	<div id="Benefits" class="tabcontent">
-	  <h2 style="color:#233600">Benefits</h2>
+	  <h2 style="color:black">Benefits</h2>
 	  <p style="color:black">Benefits Text.</p> 
 	</div>
 
 	<div id="Disadvantages" class="tabcontent">
-	  <h2 style="color:#233600">Disadvantages</h2>
+	  <h2 style="color:black">Disadvantages</h2>
 	  <p style="color:black">Disadvantages Text</p>
 	</div>
 	
 	<div id="Future_Outlook" class="tabcontent">
-	  <h2 style="color:#233600">Future Outlook</h2>
+	  <h2 style="color:black">Future Outlook</h2>
 	  <p style="color:black">Future Outlook Text</p>
 	</div>
 	
 	<div id="Risk_Reward" class="tabcontent">
-	  <h2 style="color:#233600">Risk vs Reward</h2>
+	  <h2 style="color:black">Risk vs Reward</h2>
 	  <p style="color:black">Risk vs Reward Text</p>
 	</div>
 	
 	<div id="References" class="tabcontent">
-	  <h2 style="color:#233600">References</h2>
+	  <h2 style="color:black">References</h2>
 	  <p style="color:black">References List.</p>
 	</div>
 	
