--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	}
 
 	.navagation a:hover {
-	  border-bottom: 3px solid #233600;
+	  border-bottom: 3px solid white;
 	}
 
 	.navagation a.active {
