add topic to main page

--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
 	}
 
 	.navagation a:hover {
-	  border-bottom: 3px solid #233600;
+	  border-bottom: 3px solid white;
 	}
 
 	.navagation a.active {
-	  border-bottom: 3px solid #233600;
+	  border-bottom: 3px solid white;
 	}
 	
 	<!-- Tabs/Sections-->
 
 	.tab button:hover {
-	  border-bottom: 3px solid #233600;
+	  border-bottom: 3px solid white;
 	}
 
 	.tab button.active {
-	  border-bottom: 3px solid #233600;
+	  border-bottom: 3px solid white;
 	}
 	
 	.tabcontent {
@@ -77,7 +77,7 @@
 	  background: #EEEDED;
 	  color: black;
 	  padding: 6px 12px;
-	  border: 3px solid #233600;
+	  border: 3px solid black;
 	}
 	
 </style>
@@ -86,7 +86,7 @@
 	<h1>Computing Technology in Society (COMP501) | Assignment 3</h1>
 	<!--Navagation-->
 	<div class="navagation">
-	  <a class="active" href="index.html">Home</a>
+	  <a class="tablinks" onclick="opentab(event, 'Topic')">Home</a>
 	  <a class="tablinks" onclick="opentab(event, 'Topic')">Topic</a>
 	  <a class="tablinks" onclick="opentab(event, 'Benefits')">Benefits</a>
 	  <a class="tablinks" onclick="opentab(event, 'Disadvantages')">Disadvantages</a>
@@ -105,32 +105,32 @@
 	
 	<!--Tab Content-->
 	<div id="Topic" class="tabcontent">
-	  <h2 style="color:#233600">Technology for Seniors</h2>
+	  <h2 style="color:black">Technology for Seniors</h2>
 	  <p style="color:black">Technology for Seniors Text.</p>
 	</div>
 
 	<div id="Benefits" class="tabcontent">
-	  <h2 style="color:#233600">Benefits</h2>
-	  <p style="color:black">Benefits Text. hello</p> 
+	  <h2 style="color:black">Benefits</h2>
+	  <p style="color:black">Benefits Text.</p> 
 	</div>
 
 	<div id="Disadvantages" class="tabcontent">
-	  <h2 style="color:#233600">Disadvantages</h2>
+	  <h2 style="color:black">Disadvantages</h2>
 	  <p style="color:black">Disadvantages Text</p>
 	</div>
 	
 	<div id="Future_Outlook" class="tabcontent">
-	  <h2 style="color:#233600">Future Outlook</h2>
+	  <h2 style="color:black">Future Outlook</h2>
 	  <p style="color:black">Future Outlook Text</p>
 	</div>
 	
 	<div id="Risk_Reward" class="tabcontent">
-	  <h2 style="color:#233600">Risk vs Reward</h2>
+	  <h2 style="color:black">Risk vs Reward</h2>
 	  <p style="color:black">Risk vs Reward Text</p>
 	</div>
 	
 	<div id="References" class="tabcontent">
-	  <h2 style="color:#233600">References</h2>
+	  <h2 style="color:black">References</h2>
 	  <p style="color:black">References List.</p>
 	</div>
 	
