--- a/reflections.html
+++ b/reflections.html
@@ -54,21 +54,21 @@
 	}
 
 	.navagation a:hover {
-	  border-bottom: 3px solid #233600;
+	  border-bottom: 3px solid white;
 	}
 
 	.navagation a.active {
-	  border-bottom: 3px solid #233600;
+	  border-bottom: 3px solid white;
 	}
 	
 	<!-- Tabs/Sections-->
 
 	.tab button:hover {
-	  border-bottom: 3px solid #233600;
+	  border-bottom: 3px solid white;
 	}
 
 	.tab button.active {
-	  border-bottom: 3px solid #233600;
+	  border-bottom: 3px solid white;
 	}
 	
 	.tabcontent {
@@ -103,12 +103,12 @@
 	
 	<!--Tab Content-->
 	<div id="Thomas" class="tabcontent">
-	  <h2 style="color:#233600">Reflection - Thomas</h2>
+	  <h2 style="color:black">Reflection - Thomas</h2>
 	  <p style="color:black">Thomas's Reflection</p>
 	</div>
 
 	<div id="Gregory" class="tabcontent">
-	  <h2 style="color:#233600">Reflection - Gregory</h2>
+	  <h2 style="color:black">Reflection - Gregory</h2>
 	  <p style="color:black">Gregory's Reflection.</p> 
 	</div>
 	
