--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 	<h1>Computing Technology in Society (COMP501) | Assignment 3</h1>
 	<!--Navagation-->
 	<div class="navagation">
-	  <a class="tablinks" onclick="opentab(event, 'Topic')">Home</a>
-	  <a class="tablinks" onclick="opentab(event, 'Topic')">Topic</a>
+	  <a class="active" class="tablinks" onclick="opentab(event, 'Topic')">Home</a>
+	  <a class="active" class="tablinks" onclick="opentab(event, 'Topic')">Topic</a>
 	  <a class="tablinks" onclick="opentab(event, 'Benefits')">Benefits</a>
 	  <a class="tablinks" onclick="opentab(event, 'Disadvantages')">Disadvantages</a>
 	  <a class="tablinks" onclick="opentab(event, 'Future_Outlook')">Future Outlook</a>
