--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </style>
  
 <body>
-	<h1>Computing Technology in Society (COMP501) | Assignment 3</h1>
+	<h1>Technology for Seniors</h1>
 	<!--Navagation-->
 	<div class="navagation">
 	  <a class="active" class="tablinks" onclick="opentab(event, 'Topic')">Home</a>
@@ -139,7 +139,7 @@
 	
 	<!-- Footer -->
 	<hr>
-	<p>Thomas Brears (#20122554) | Gregory Doo (#20113186) <br><br></p>
+	<p>Computing Technology in Society (COMP501) | Assignment 3 | Thomas Brears (#20122554) | Gregory Doo (#20113186) <br><br></p>
 	<p>© <script> 
 			var CurrentYear = new Date().getFullYear() 
 			document.write(CurrentYear) 
