--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 	  <a class="tablinks" onclick="opentab(event, 'Risk_Reward')">Risk vs Reward</a>
 	  <a href="reflections.html">Reflections</a>
 	  <a class="tablinks" onclick="opentab(event, 'References')">References</a>
+	  <a href="https://github.com/fcx9443/group1307">Github Repository</a>
 	</div>
 
 	<br>
