--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	  <a class="tablinks" onclick="opentab(event, 'Risk_Reward')">Risk vs Reward</a>
 	  <a href="reflections.html">Reflections</a>
 	  <a class="tablinks" onclick="opentab(event, 'References')">References</a>
-	  <a href="https://github.com/fcx9443/group1307">Github Repository</a>
+	  <a target="_blank" href="https://github.com/fcx9443/group1307">Github Repository</a>
 	</div>
 
 	<br>
@@ -106,33 +106,49 @@
 	
 	<!--Tab Content-->
 	<div id="Topic" class="tabcontent">
-	  <h2 style="color:black">Technology for Seniors</h2>
-	  <p style="color:black">Technology for Seniors Text.</p>
+	  <h2 style="color:black">Topic - Technology for Seniors</h2>
+	  <p style="color: black; text-align: left">
+	  As technology continues to impact our lives significantly, our society grows, and our knowledge of the future grows exponentially, making it easier for us to deal with these modern innovations and advancements. However, as the saying by Chaucer (2020) goes, "Time and tide waits for no man", but isn't that the problem with modern technology, wherein time has become so advanced that so many generations find it arduous or strenuous to comprehend the basic understanding of different forms of technology and every person in society have different levels of knowledge of technology, some more so than others, but what is certain is that those who were brought up and taught how to use the internet and such, were more likely to develop a more healthy understanding and adapt better to the growing environment around them. In a book published by Baecker (2019), it says, "Older adults experience more vulnerability with respect to new technology", implying how all these innovations in digital devices and the internet of things have become too much for many of the older generations to cope with, making it extremely difficult for them to develop fundamental understanding and connections with digital devices. Another intriguing key point that Baecker (2019) brings up another fascinating key point: "73 per cent of seniors" struggle to understand and navigate new electronic devices, showing that as time passes, not everyone can assimilate themselves to change. Although the technology for the elderly the population is not so well endorsed, that does not necessarily mean that they have not forgotten to consider how they feel about these innovations; they are just more focused on the benefits that their devices could offer to the older generation, rather than the accessibility and ease of use. Especially in these dark times, with a pandemic plaguing the whole of New Zealand and the world, it becomes apparent that the assistance of Technology and IT staff is needed more than ever to help everyone and so the in-demand supply for standard devices like laptops and smartphones increases, which incurs the senior citizens to create new strategies that give themselves more confidence in using unfamiliar forms of technology that would seem alien to them, such as Naming their tablet or humanizing their phone helps to bond older people to Technology (Wilson-Nash & Tinson, 2021). <br> <br> Technology isn't all bad, though the benefits of it surely outweigh the deficits that are encountered on an everyday basis; its crucial to remember how technology affects everyone in different ways, whether it's their physical or mental state and how each generation reacts, hence the importance of having aspects like client feedback and critical evaluation, which assist in the development of new and reliable devices that can appeal to all generations.<br><br><br>
+	  
+	  <b>Figure 1</b><br><br>
+	  <i>Helping seniors cross the digital divide | Isabella Martinez | TEDxTemecula.</i><br>
+	  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/rSWbgNAgAE8">
+	  </iframe>
+		
+	  </p>
 	</div>
 
 	<div id="Benefits" class="tabcontent">
 	  <h2 style="color:black">Benefits</h2>
-	  <p style="color:black">Benefits Text.</p> 
+	  <p style="color: black; text-align: left">Technology is the future; humans, young and old, need to be comfortable and embrace technology in our everyday use. Research by Mukhopadhyay et al. (2021) has identified that from 2017 to 2014, 50 elderly residents died in their homes from falling to the ground in Singapore. Due to these preventable deaths and technological advancements, the Singapore government then funded a test pilot for fall detection devices installed in 500 homes. The author also reports that these fall detection devices use sound technology, accelerometer, and motion-based activity to detect a fall and notify caregivers to provide support. This use of technology benefits seniors, as when we become elderly, we become more venerable and need more significant support. The fall detection system is only one of the numerous technologies aimed at seniors and those less able to support themselves actively.
+	  Caring for the elderly is growing increasingly challenging. Carers find it challenging to care for the elderly as they struggle to know how they feel and what they need (Yap et al., 2021). Yap et al. (2021) have also identified a disconnect between the carer and senior relationships. They have, in turn, created a virtual diary app where the elderly can write in and convey their thoughts and feelings, that Artificial Intelligence (AI) will then analyze and express the emotions to the carer without revealing the content of the writing. Yap et al. (2021) believe this will enable a better relationship between the elderly and their caregivers as the caregivers can better understand the needs and feelings of seniors and enable fast and more accurate support when and where it matters. 
+	  The two forms of technology designed for seniors identified above, from the fall detection technology that detects a fall with an accelerometer and motion technology to the virtual diary that conveys the writers' feelings and emotions to their caregiver, are excellent forms of technology created with elderly as the designed end user. However great these technologies are, the issue of implementation and use exists. The use of technology is not always implemented widely among seniors, and the older, more familiar techniques such as pen and paper are likely to prevail against a digital-based diary for our elderly population. However, like all technology, there are opportunities for their implementation, such as the installation of fall detection systems into homes with limited input required from the resident and will be suitable for those of all technological capabilities as the system handles the notifications and processing and this similar for the virtual diary where the elderly user is only required to write down their thoughts and idea. The AI will analyze the input for the system to output the results to the caregivers' dashboard. A notification is sent, as shown in figure 1, the caregiver notification was a top requested feature, as this provides the carer with real-time access and more significant insights to support their senior user (Yap et al., 2021).
+	  Overall, both forms of technologies are vastly different; nonetheless, they share the same principles and highlight the need to implement technology gradually, seamlessly, and with simple or minimal input from the senior user. When these steps are implemented successfully, they build the foundation for a great app designed for seniors. Yap et al. (2021) report on their desire for future developers to design and develop their applications and programs for the elderly with similar methods of design and functionality, as highlighted in the authors' report..<br><br><br>
+	  
+	  <b>Figure 2</b><br><br>
+	  <i>ELDIARY: A digital diary mobile application integrated with emotion recognition for elderly.</i><br>
+	  <img src="" alt="Figure 2. | ELDIARY: A digital diary mobile application integrated with emotion recognition for elderly." width="560" height="315">
+	</p> 
 	</div>
 
 	<div id="Disadvantages" class="tabcontent">
 	  <h2 style="color:black">Disadvantages</h2>
-	  <p style="color:black">Disadvantages Text</p>
+	  <p style="color: black; text-align: left"></p>
 	</div>
 	
 	<div id="Future_Outlook" class="tabcontent">
 	  <h2 style="color:black">Future Outlook</h2>
-	  <p style="color:black">Future Outlook Text</p>
+	  <p style="color: black; text-align: left"></p>
 	</div>
 	
 	<div id="Risk_Reward" class="tabcontent">
 	  <h2 style="color:black">Risk vs Reward</h2>
-	  <p style="color:black">Risk vs Reward Text</p>
+	  <p style="color: black; text-align: left"></p>
 	</div>
 	
 	<div id="References" class="tabcontent">
 	  <h2 style="color:black">References</h2>
-	  <p style="color:black">References List.</p>
+	  <p style="color: black; text-align: left"></p>
 	</div>
 	
 	<br>
