--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 	</div>
 	
 	<div id="References" class="tabcontent">
-	  <h2 style="color:black">References</h2>
+	  <h2 style="color:black; text-align: left;">References:</h2>
 	  <img src="img/references.png" width="590" height="703">
 	</div>
 	
